# garmin-activities-trend

./: .env  .env.example  .gitignore  .netlifyignore  Test-nvidia.py  garmin_activities_formatted.xlsx  garmin_activities_trend.html  get-garmin.py  index.html  main.py  pyproject.toml  requirements-garmin.txt  requirements.txt  run-analysis.py
